# ChangeLog for app-backup/rdiff-backup
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/rdiff-backup/ChangeLog,v 1.62 2012/09/23 04:27:40 mattst88 Exp $

  23 Sep 2012; Matt Turner <mattst88@gentoo.org> rdiff-backup-1.3.3.ebuild:
  Added ~alpha ~mips, bug 406911.

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> rdiff-backup-1.3.3.ebuild:
  sh/sparc stable wrt #396771

  06 Mar 2012; Brent Baude <ranger@gentoo.org> rdiff-backup-1.3.3.ebuild:
  Marking rdiff-backup-1.3.3 ppc64 for bug 396771

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rdiff-backup-1.3.3.ebuild:
  x86 stable wrt bug #396771

  14 Feb 2012; Brent Baude <ranger@gentoo.org> rdiff-backup-1.3.3.ebuild:
  Marking rdiff-backup-1.3.3 ppc for bug 396771

  10 Feb 2012; Markus Meier <maekke@gentoo.org> rdiff-backup-1.3.3.ebuild:
  arm stable, bug #396771

  02 Feb 2012; Agostino Sarubbo <ago@gentoo.org> rdiff-backup-1.3.3.ebuild:
  Stable for amd64, wrt bug #396771

  19 May 2011; Fabian Groffen <grobian@gentoo.org> rdiff-backup-1.3.3.ebuild:
  Marked ~x64-macos, bug #368009

  22 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -rdiff-backup-1.2.8.ebuild:
  Delete.

  20 Mar 2011; Raúl Porcel <armin76@gentoo.org> rdiff-backup-1.2.8-r1.ebuild:
  arm/sh/sparc stable wrt #338598

  11 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  rdiff-backup-1.2.8-r1.ebuild:
  ppc/ppc64 stable wrt #338598

  08 Mar 2011; Markos Chandras <hwoarang@gentoo.org>
  rdiff-backup-1.2.8-r1.ebuild:
  Stable on amd64 wrt bug #338598

  07 Mar 2011; Thomas Kahle <tomka@gentoo.org> rdiff-backup-1.2.8-r1.ebuild:
  x86 stable per bug 338598

  05 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -rdiff-backup-1.0.5.ebuild, -rdiff-backup-1.1.14.ebuild:
  Delete.

  05 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  rdiff-backup-1.2.8.ebuild, rdiff-backup-1.2.8-r1.ebuild,