@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>app-backup</herd>
+	<longdescription>Remote incremental file backup utility; uses librsync's rdiff utility to create concise, versioned backups</longdescription>
 </pkgmetadata>
