@@ -1,15 +1,13 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/rdiff-backup/rdiff-backup-1.3.3.ebuild,v 1.10 2012/09/23 04:27:40 mattst88 Exp $
+# $Header: $
 
-EAPI="3"
-PYTHON_DEPEND="2"
-SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="3.* *-jython"
+EAPI=5
 
-inherit distutils
+PYTHON_COMPAT=( python{2_6,2_7} )
+inherit distutils-r1
 
-DESCRIPTION="Remote incremental file backup utility; uses librsync's rdiff utility to create concise, versioned backups."
+DESCRIPTION="local/remote mirror and incremental backup"
 HOMEPAGE="http://www.nongnu.org/rdiff-backup/"
 SRC_URI="http://savannah.nongnu.org/download/${PN}/${P}.tar.gz"
 
@@ -18,10 +16,9 @@ SLOT="0"
 KEYWORDS="~alpha amd64 arm ~mips ppc ppc64 sh sparc x86 ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos"
 IUSE="acl xattr"
 
-DEPEND=">=net-libs/librsync-0.9.7
+DEPEND=">=net-libs/librsync-0.9.7"
+RDEPEND="${DEPEND}
 		!arm? ( xattr? ( dev-python/pyxattr )
 				acl? ( dev-python/pylibacl ) )"
-RDEPEND="${DEPEND}"
 
 DOCS="examples.html"
-PYTHON_MODNAME="rdiff_backup"
