@@ -1,20 +1,20 @@
->=net-libs/librsync-0.9.7 !arm? ( xattr? ( dev-python/pyxattr ) acl? ( dev-python/pylibacl ) ) =dev-lang/python-2*
->=net-libs/librsync-0.9.7 !arm? ( xattr? ( dev-python/pyxattr ) acl? ( dev-python/pylibacl ) ) =dev-lang/python-2*
+>=net-libs/librsync-0.9.7 userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
+>=net-libs/librsync-0.9.7 !arm? ( xattr? ( dev-python/pyxattr ) acl? ( dev-python/pylibacl ) ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
 0
 http://savannah.nongnu.org/download/rdiff-backup/rdiff-backup-1.3.3.tar.gz
 
 http://www.nongnu.org/rdiff-backup/
 GPL-2
-Remote incremental file backup utility; uses librsync's rdiff utility to create concise, versioned backups.
+local/remote mirror and incremental backup
 ~alpha amd64 arm ~mips ppc ppc64 sh sparc x86 ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos
-distutils multilib python toolchain-funcs
-acl xattr
+distutils-r1 eutils multibuild multilib multiprocessing python-r1 python-utils-r1 toolchain-funcs
+acl xattr python_targets_python2_6 python_targets_python2_7
+|| ( python_targets_python2_6 python_targets_python2_7 )
 
 
+5
 
-3
-
-compile install postinst postrm prepare
+compile configure install prepare test
 
 
 
