@@ -1,6 +1,10 @@
 # ChangeLog for app-backup/rdiff-backup
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-backup/rdiff-backup/ChangeLog,v 1.62 2012/09/23 04:27:40 mattst88 Exp $
+
+  10 Apr 2014; Bernard Cafarelli <voyageur@gentoo.org>
+  rdiff-backup-1.3.3.ebuild, metadata.xml:
+  EAPI bump and switch to distutils-r1
 
   23 Sep 2012; Matt Turner <mattst88@gentoo.org> rdiff-backup-1.3.3.ebuild:
   Added ~alpha ~mips, bug 406911.
